force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/ND_Advisory_Council_Recommendation__c.object-meta.xml
<CustomObject>
    <description>Houses Advisory Council Nomination and Renewal Records.</description>
    <label>Advisory Council Recommendation</label>
    <nameField>
        <displayFormat>ACN-{00000}</displayFormat>
        <label>Advisory Council Recommendation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advisory Council Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>