force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/nd_Advisory_Council_Desc__c.field-meta.xml
<CustomField>
    <fullName>nd_Advisory_Council_Desc__c</fullName>
    <description>Advisory Council Description</description>
    <formula>ND_Advisory_Council__r.ucinn_ascendv2__Involvement_Description__c</formula>
    <label>Advisory Council Desc.</label>
    <type>Text</type>
</CustomField>