force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_Advisory_Council_Year__c.field-meta.xml
<CustomField>
    <fullName>ND_Advisory_Council_Year__c</fullName>
    <description>Year of Advisory Council membership</description>
    <label>Advisory Council Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Fiscal_Year</valueSetName>
    </valueSet>
</CustomField>