force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_Constituent__c.field-meta.xml
<CustomField>
    <fullName>ND_Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Constituent to be nominated/renewed</description>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Advisory_Council_Nominations</relationshipName>
    <type>Lookup</type>
</CustomField>