force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_Council_Retire__c.field-meta.xml
<CustomField>
    <fullName>ND_Council_Retire__c</fullName>
    <label>Council Retire</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ND_Renewal_Recommendation__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Self-Retire</fullName>
            </value>
            <value>
                <fullName>Quiet</fullName>
            </value>
            <value>
                <fullName>Celebratory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>