force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_Decision_Complexity__c.field-meta.xml
<CustomField>
    <fullName>ND_Decision_Complexity__c</fullName>
    <description>Tracks type of decision complexity for the nomination/renewal</description>
    <label>Decision Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>