force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_Decision_Summary__c.field-meta.xml
<CustomField>
    <fullName>ND_Decision_Summary__c</fullName>
    <description>Tracks the decision summary/notes for the nomination/renewal</description>
    <inlineHelpText>For use by Advisory Council program staff only - notes from the annual membership review with Council leader(s) &amp; UR/AC leadership.</inlineHelpText>
    <label>Decision Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>