force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/nd_Discussed_nomination_with_AAD__c.field-meta.xml
<CustomField>
    <fullName>nd_Discussed_nomination_with_AAD__c</fullName>
    <label>Discussed this nomination with the AAD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>