force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/nd_Member_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>nd_Member_Net_Worth__c</fullName>
    <label>RD Assessment of Member Net Worth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I agree with Net Worth</fullName>
            </value>
            <value>
                <fullName>I don&apos;t know member well enough to assess Net Worth</fullName>
            </value>
            <value>
                <fullName>I disagree with Net Worth (add comment)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>