force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_Membership_Decision__c.field-meta.xml
<CustomField>
    <fullName>ND_Membership_Decision__c</fullName>
    <description>Tracks the decision for the nomination/renewal</description>
    <label>Membership Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CP</fullName>
                <label>Approve-Constituent Pending</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Approve-Constituent Accept</label>
            </value>
            <value>
                <fullName>CD</fullName>
                <label>Approve-Constituent Decline</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Reject</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Gift Contingent</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Deferred to future FY</label>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>Approve</label>
            </value>
            <value>
                <fullName>Deferred to next FY</fullName>
                <isActive>false</isActive>
                <label>Deferred to next FY</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>