force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/nd_Net_Worth_Comments__c.field-meta.xml
<CustomField>
    <fullName>nd_Net_Worth_Comments__c</fullName>
    <inlineHelpText>Add comments if you selected &quot;I disagree with Net Worth&quot; in Member Net Worth</inlineHelpText>
    <label>Net Worth Comments</label>
    <type>TextArea</type>
</CustomField>