force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_Non_Development_Interest__c.field-meta.xml
<CustomField>
    <fullName>ND_Non_Development_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to capture if constituent may be a member due to non development interest (and should be excluded from giving reports)</description>
    <label>Non-Development Interest</label>
    <type>Checkbox</type>
</CustomField>