force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/nd_PRM__c.field-meta.xml
<CustomField>
    <fullName>nd_PRM__c</fullName>
    <description>For use with the My Advisory Council Recommendations list view</description>
    <formula>ND_Constituent__r.ucinn_ascendv2__PRM__r.Id =  $User.Id</formula>
    <label>PRM</label>
    <type>Checkbox</type>
</CustomField>