force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>ND_RecordType_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordType Name</label>
    <type>Text</type>
</CustomField>