force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_Renewal_Date__c</fullName>
    <description>Date of advisory council membership renewal</description>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>