force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_Renewal_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>ND_Renewal_Recommendation__c</fullName>
    <description>Tracks renewal recommendation type</description>
    <label>Renewal Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UG</fullName>
                <label>Council 1 Year Renewal</label>
            </value>
            <value>
                <fullName>UB</fullName>
                <label>Council 3 Year Renewal</label>
            </value>
            <value>
                <fullName>UC</fullName>
                <label>Council Recommend Retire</label>
            </value>
            <value>
                <fullName>UT</fullName>
                <label>Council Transfer</label>
            </value>
            <value>
                <fullName>UF</fullName>
                <label>Defer to Council Leadership/Non Dev Interest</label>
            </value>
            <value>
                <fullName>UR</fullName>
                <label>Member Self Retire</label>
            </value>
            <value>
                <fullName>Council Recommend Renewal</fullName>
                <isActive>false</isActive>
                <label>Council Recommend Renewal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>