force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_Stage__c.field-meta.xml
<CustomField>
    <fullName>ND_Stage__c</fullName>
    <description>Stage of advisory council renewal/nomination</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1-Ready for Review</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2-In Progress</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3-Complete</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4-Canceled</label>
            </value>
            <value>
                <fullName>Academic Review</fullName>
                <isActive>false</isActive>
                <label>Academic Review</label>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Constituent Responded</fullName>
                <isActive>false</isActive>
                <label>Constituent Responded</label>
            </value>
            <value>
                <fullName>Constituent Response Needed</fullName>
                <isActive>false</isActive>
                <label>Constituent Response Needed</label>
            </value>
            <value>
                <fullName>Development Leadership Review</fullName>
                <isActive>false</isActive>
                <label>Development Leadership Review</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Invitation Extended</fullName>
                <isActive>false</isActive>
                <label>Invitation Extended</label>
            </value>
            <value>
                <fullName>Review</fullName>
                <isActive>false</isActive>
                <label>Review</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <isActive>false</isActive>
                <label>Submitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>