force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/nd_Young_Alum__c.field-meta.xml
<CustomField>
    <fullName>nd_Young_Alum__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates young alum position</description>
    <label>Young Alum</label>
    <type>Checkbox</type>
</CustomField>