force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/sfl_load_unique_id__c.field-meta.xml
<CustomField>
    <fullName>sfl_load_unique_id__c</fullName>
    <description>Used by development&apos;s load process. This field allows the load process to link back the load status and, if applicable, the newly created Salesforce ID. It is not intended to be an external id.</description>
    <inlineHelpText>Used by development&apos;s load process. This field allows the load process to link back the load status and, if applicable, the newly created Salesforce ID. It is not intended to be an external id.</inlineHelpText>
    <label>sfl_load_unique_id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>