force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <description>Renewal for Advisory Council</description>
    <label>Renewal</label>
</RecordType>