force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ND_Constituent__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ND_Advisory_Council__c</columns>
    <columns>ND_Stage__c</columns>
    <columns>ND_Advisory_Council_Year__c</columns>
    <columns>ND_Renewal_Recommendation__c</columns>
    <columns>ND_Renewal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>