force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/listViews/My_Advisory_Council_Recommendations.listView-meta.xml
<ListView>
    <fullName>My_Advisory_Council_Recommendations</fullName>
    <columns>NAME</columns>
    <columns>ND_Constituent__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ND_Advisory_Council__c</columns>
    <columns>ND_Advisory_Council_Year__c</columns>
    <columns>ND_Renewal_Date__c</columns>
    <columns>ND_Stage__c</columns>
    <columns>ND_Decision_Complexity__c</columns>
    <columns>ND_UR_Notes__c</columns>
    <columns>ND_Decision_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ND_Stage__c</field>
        <operation>notEqual</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>nd_PRM__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Advisory Council Recommendations</label>
</ListView>